# paperless-ngx-cli

./: .gitignore  README.md  pngx.example.toml  pyproject.toml
.github/workflows/: python-publish.yml
src/pypaperless_cli/: api.py  app.py  const.py
src/pypaperless_cli/commands/: __init__.py  auth.py  document.py
src/pypaperless_cli/commands/document/: __init__.py  edit.py  show.py
src/pypaperless_cli/config/: __init__.py  account.py  config.py
src/pypaperless_cli/utils/: command_groups.py  converters.py  groups.py  highlighter.py  types.py  validators.py
