[tool.poetry]
name = "pypaperless-cli"
version = "0.1.1"
description = ""
authors = ["Marcel Brückner <marcelbrueckner@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pypaperless_cli", from = "src"}]

[tool.poetry.scripts]
pngx = "pypaperless_cli.app:launch"

[tool.poetry.dependencies]
python = "^3.12"
arrow = "^1.3.0"
httpx = "^0.27.0"
cyclopts = "^2.5.0"
tomlkit = "^0.12.4"
xdg-base-dirs = "^6.0.1"
pypaperless = "^3.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"
httpx = {extras = ["cli"], version = "^0.27.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
